--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -50,9 +50,9 @@
     yAxes: [{
         ticks: {
             beginAtZero:true
+               }
+           }]
         }
-    }]
-}
       }
     });
 
@@ -60,3 +60,4 @@
 
 </body>
 </html>
+
